plugin-bbk/src/main/gen/com/larena/boxbreaker/plugin/bbk/parser/BbkParser.java
// This is a generated file. Not intended for manual editing.
package com.larena.boxbreaker.plugin.bbk.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.larena.boxbreaker.plugin.bbk.psi.BbkTypes.*;
import static com.larena.boxbreaker.plugin.bbk.parser.BbkParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class BbkParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType root_, PsiBuilder builder_) {
    parseLight(root_, builder_);
    return builder_.getTreeBuilt();
  }

  public void parseLight(IElementType root_, PsiBuilder builder_) {
    boolean result_;
    builder_ = adapt_builder_(root_, builder_, this, null);
    Marker marker_ = enter_section_(builder_, 0, _COLLAPSE_, null);
    result_ = parse_root_(root_, builder_);
    exit_section_(builder_, 0, marker_, root_, result_, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType root_, PsiBuilder builder_) {
    return parse_root_(root_, builder_, 0);
  }

  static boolean parse_root_(IElementType root_, PsiBuilder builder_, int level_) {
    return translation_unit(builder_, level_ + 1);
  }

  /* ********************************************************** */
  // multiplicative_expression ((PLUS | MINUS) multiplicative_expression)*
  public static boolean additive_expression(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "additive_expression")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ADDITIVE_EXPRESSION, "<additive expression>");
    result_ = multiplicative_expression(builder_, level_ + 1);
    result_ = result_ && additive_expression_1(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // ((PLUS | MINUS) multiplicative_expression)*
  private static boolean additive_expression_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "additive_expression_1")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!additive_expression_1_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "additive_expression_1", pos_)) break;
    }
    return true;
  }

  // (PLUS | MINUS) multiplicative_expression
  private static boolean additive_expression_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "additive_expression_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = additive_expression_1_0_0(builder_, level_ + 1);
    result_ = result_ && multiplicative_expression(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // PLUS | MINUS
  private static boolean additive_expression_1_0_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "additive_expression_1_0_0")) return false;
    boolean result_;
    result_ = consumeToken(builder_, PLUS);
    if (!result_) result_ = consumeToken(builder_, MINUS);
    return result_;
  }

  /* ********************************************************** */
  // KW_ALIGN
  public static boolean align_modifier(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "align_modifier")) return false;
    if (!nextTokenIs(builder_, KW_ALIGN)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, KW_ALIGN);
    exit_section_(builder_, marker_, ALIGN_MODIFIER, result_);
    return result_;
  }

  /* ********************************************************** */
  // expression (COMMA expression)*
  public static boolean argument_list(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "argument_list")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ARGUMENT_LIST, "<argument list>");
    result_ = expression(builder_, level_ + 1);
    result_ = result_ && argument_list_1(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // (COMMA expression)*
  private static boolean argument_list_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "argument_list_1")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!argument_list_1_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "argument_list_1", pos_)) break;
    }
    return true;
  }

  // COMMA expression
  private static boolean argument_list_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "argument_list_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, COMMA);
    result_ = result_ && expression(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // EQ | PLUS_EQ | MINUS_EQ | STAR_EQ | SLASH_EQ | PERCENT_EQ
  //                | AMP_EQ | PIPE_EQ | CARET_EQ | LT_LT_EQ | GT_GT_EQ
  public static boolean assignment_op(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "assignment_op")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ASSIGNMENT_OP, "<assignment op>");
    result_ = consumeToken(builder_, EQ);
    if (!result_) result_ = consumeToken(builder_, PLUS_EQ);
    if (!result_) result_ = consumeToken(builder_, MINUS_EQ);
    if (!result_) result_ = consumeToken(builder_, STAR_EQ);
    if (!result_) result_ = consumeToken(builder_, SLASH_EQ);
    if (!result_) result_ = consumeToken(builder_, PERCENT_EQ);
    if (!result_) result_ = consumeToken(builder_, AMP_EQ);
    if (!result_) result_ = consumeToken(builder_, PIPE_EQ);
    if (!result_) result_ = consumeToken(builder_, CARET_EQ);
    if (!result_) result_ = consumeToken(builder_, LT_LT_EQ);
    if (!result_) result_ = consumeToken(builder_, GT_GT_EQ);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // assignment_op expression attribute_modifier?
  static boolean assignment_tail(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "assignment_tail")) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_);
    result_ = assignment_op(builder_, level_ + 1);
    pinned_ = result_; // pin = 1
    result_ = result_ && report_error_(builder_, expression(builder_, level_ + 1));
    result_ = pinned_ && assignment_tail_2(builder_, level_ + 1) && result_;
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  // attribute_modifier?
  private static boolean assignment_tail_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "assignment_tail_2")) return false;
    attribute_modifier(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // ATTR_HALFUP | ATTR_HALFDOWN | ATTR_TRUNC
  public static boolean attribute_modifier(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "attribute_modifier")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ATTRIBUTE_MODIFIER, "<attribute modifier>");
    result_ = consumeToken(builder_, ATTR_HALFUP);
    if (!result_) result_ = consumeToken(builder_, ATTR_HALFDOWN);
    if (!result_) result_ = consumeToken(builder_, ATTR_TRUNC);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // KW_BASED LPAREN IDENT RPAREN
  public static boolean based_modifier(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "based_modifier")) return false;
    if (!nextTokenIs(builder_, KW_BASED)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, BASED_MODIFIER, null);
    result_ = consumeTokens(builder_, 1, KW_BASED, LPAREN, IDENT, RPAREN);
    pinned_ = result_; // pin = 1
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  /* ********************************************************** */
  // equality_expression (AMP equality_expression)*
  public static boolean bitwise_and_expression(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "bitwise_and_expression")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, BITWISE_AND_EXPRESSION, "<bitwise and expression>");
    result_ = equality_expression(builder_, level_ + 1);
    result_ = result_ && bitwise_and_expression_1(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // (AMP equality_expression)*
  private static boolean bitwise_and_expression_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "bitwise_and_expression_1")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!bitwise_and_expression_1_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "bitwise_and_expression_1", pos_)) break;
    }
    return true;
  }

  // AMP equality_expression
  private static boolean bitwise_and_expression_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "bitwise_and_expression_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, AMP);
    result_ = result_ && equality_expression(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // bitwise_xor_expression (PIPE bitwise_xor_expression)*
  public static boolean bitwise_or_expression(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "bitwise_or_expression")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, BITWISE_OR_EXPRESSION, "<bitwise or expression>");
    result_ = bitwise_xor_expression(builder_, level_ + 1);
    result_ = result_ && bitwise_or_expression_1(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // (PIPE bitwise_xor_expression)*
  private static boolean bitwise_or_expression_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "bitwise_or_expression_1")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!bitwise_or_expression_1_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "bitwise_or_expression_1", pos_)) break;
    }
    return true;
  }

  // PIPE bitwise_xor_expression
  private static boolean bitwise_or_expression_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "bitwise_or_expression_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, PIPE);
    result_ = result_ && bitwise_xor_expression(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // bitwise_and_expression (CARET bitwise_and_expression)*
  public static boolean bitwise_xor_expression(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "bitwise_xor_expression")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, BITWISE_XOR_EXPRESSION, "<bitwise xor expression>");
    result_ = bitwise_and_expression(builder_, level_ + 1);
    result_ = result_ && bitwise_xor_expression_1(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // (CARET bitwise_and_expression)*
  private static boolean bitwise_xor_expression_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "bitwise_xor_expression_1")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!bitwise_xor_expression_1_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "bitwise_xor_expression_1", pos_)) break;
    }
    return true;
  }

  // CARET bitwise_and_expression
  private static boolean bitwise_xor_expression_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "bitwise_xor_expression_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, CARET);
    result_ = result_ && bitwise_and_expression(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // variable_declaration
  //              | constant_declaration
  //              | data_structure_declaration
  //              | subroutine_definition
  //              | directive
  //              | statement
  //              | unknown_block_item
  public static boolean block_item(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "block_item")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, BLOCK_ITEM, "<block item>");
    result_ = variable_declaration(builder_, level_ + 1);
    if (!result_) result_ = constant_declaration(builder_, level_ + 1);
    if (!result_) result_ = data_structure_declaration(builder_, level_ + 1);
    if (!result_) result_ = subroutine_definition(builder_, level_ + 1);
    if (!result_) result_ = directive(builder_, level_ + 1);
    if (!result_) result_ = statement(builder_, level_ + 1);
    if (!result_) result_ = unknown_block_item(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // LBRACE block_item* RBRACE
  public static boolean block_statement(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "block_statement")) return false;
    if (!nextTokenIs(builder_, LBRACE)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, BLOCK_STATEMENT, null);
    result_ = consumeToken(builder_, LBRACE);
    pinned_ = result_; // pin = 1
    result_ = result_ && report_error_(builder_, block_statement_1(builder_, level_ + 1));
    result_ = pinned_ && consumeToken(builder_, RBRACE) && result_;
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  // block_item*
  private static boolean block_statement_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "block_statement_1")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!block_item(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "block_statement_1", pos_)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // KW_BREAK SEMI
  public static boolean break_statement(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "break_statement")) return false;
    if (!nextTokenIs(builder_, KW_BREAK)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, BREAK_STATEMENT, null);
    result_ = consumeTokens(builder_, 1, KW_BREAK, SEMI);
    pinned_ = result_; // pin = 1
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  /* ********************************************************** */
  // KW_CALLP postfix_expression SEMI
  public static boolean callp_statement(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "callp_statement")) return false;
    if (!nextTokenIs(builder_, KW_CALLP)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, CALLP_STATEMENT, null);
    result_ = consumeToken(builder_, KW_CALLP);
    pinned_ = result_; // pin = 1
    result_ = result_ && report_error_(builder_, postfix_expression(builder_, level_ + 1));
    result_ = pinned_ && consumeToken(builder_, SEMI) && result_;
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  /* ********************************************************** */
  // KW_CHAIN   expression IDENT IDENT? SEMI
  public static boolean chain_op(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "chain_op")) return false;
    if (!nextTokenIs(builder_, KW_CHAIN)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, CHAIN_OP, null);
    result_ = consumeToken(builder_, KW_CHAIN);
    pinned_ = result_; // pin = 1
    result_ = result_ && report_error_(builder_, expression(builder_, level_ + 1));
    result_ = pinned_ && report_error_(builder_, consumeToken(builder_, IDENT)) && result_;
    result_ = pinned_ && report_error_(builder_, chain_op_3(builder_, level_ + 1)) && result_;
    result_ = pinned_ && consumeToken(builder_, SEMI) && result_;
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  // IDENT?
  private static boolean chain_op_3(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "chain_op_3")) return false;
    consumeToken(builder_, IDENT);
    return true;
  }

  /* ********************************************************** */
  // KW_CLOSE   IDENT SEMI
  public static boolean close_op(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "close_op")) return false;
    if (!nextTokenIs(builder_, KW_CLOSE)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, CLOSE_OP, null);
    result_ = consumeTokens(builder_, 1, KW_CLOSE, IDENT, SEMI);
    pinned_ = result_; // pin = 1
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  /* ********************************************************** */
  // KW_CONST LPAREN (literal | IDENT) RPAREN
  public static boolean const_wrapper(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "const_wrapper")) return false;
    if (!nextTokenIs(builder_, KW_CONST)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, CONST_WRAPPER, null);
    result_ = consumeTokens(builder_, 1, KW_CONST, LPAREN);
    pinned_ = result_; // pin = 1
    result_ = result_ && report_error_(builder_, const_wrapper_2(builder_, level_ + 1));
    result_ = pinned_ && consumeToken(builder_, RPAREN) && result_;
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  // literal | IDENT
  private static boolean const_wrapper_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "const_wrapper_2")) return false;
    boolean result_;
    result_ = literal(builder_, level_ + 1);
    if (!result_) result_ = consumeToken(builder_, IDENT);
    return result_;
  }

  /* ********************************************************** */
  // KW_DCL_C IDENT constant_value SEMI
  public static boolean constant_declaration(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "constant_declaration")) return false;
    if (!nextTokenIs(builder_, KW_DCL_C)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, CONSTANT_DECLARATION, null);
    result_ = consumeTokens(builder_, 1, KW_DCL_C, IDENT);
    pinned_ = result_; // pin = 1
    result_ = result_ && report_error_(builder_, constant_value(builder_, level_ + 1));
    result_ = pinned_ && consumeToken(builder_, SEMI) && result_;
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  /* ********************************************************** */
  // const_wrapper | literal | KW_TRUE | KW_FALSE | KW_NULL
  public static boolean constant_value(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "constant_value")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, CONSTANT_VALUE, "<constant value>");
    result_ = const_wrapper(builder_, level_ + 1);
    if (!result_) result_ = literal(builder_, level_ + 1);
    if (!result_) result_ = consumeToken(builder_, KW_TRUE);
    if (!result_) result_ = consumeToken(builder_, KW_FALSE);
    if (!result_) result_ = consumeToken(builder_, KW_NULL);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // KW_CONTINUE SEMI
  public static boolean continue_statement(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "continue_statement")) return false;
    if (!nextTokenIs(builder_, KW_CONTINUE)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, CONTINUE_STATEMENT, null);
    result_ = consumeTokens(builder_, 1, KW_CONTINUE, SEMI);
    pinned_ = result_; // pin = 1
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  /* ********************************************************** */
  // literal | KW_TRUE | KW_FALSE | KW_NULL | STAR_IDENT | IDENT
  static boolean ctl_opt_arg(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "ctl_opt_arg")) return false;
    boolean result_;
    result_ = literal(builder_, level_ + 1);
    if (!result_) result_ = consumeToken(builder_, KW_TRUE);
    if (!result_) result_ = consumeToken(builder_, KW_FALSE);
    if (!result_) result_ = consumeToken(builder_, KW_NULL);
    if (!result_) result_ = consumeToken(builder_, STAR_IDENT);
    if (!result_) result_ = consumeToken(builder_, IDENT);
    return result_;
  }

  /* ********************************************************** */
  // LPAREN ctl_opt_arg (COLON ctl_opt_arg)* RPAREN
  public static boolean ctl_opt_args(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "ctl_opt_args")) return false;
    if (!nextTokenIs(builder_, LPAREN)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, CTL_OPT_ARGS, null);
    result_ = consumeToken(builder_, LPAREN);
    pinned_ = result_; // pin = 1
    result_ = result_ && report_error_(builder_, ctl_opt_arg(builder_, level_ + 1));
    result_ = pinned_ && report_error_(builder_, ctl_opt_args_2(builder_, level_ + 1)) && result_;
    result_ = pinned_ && consumeToken(builder_, RPAREN) && result_;
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  // (COLON ctl_opt_arg)*
  private static boolean ctl_opt_args_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "ctl_opt_args_2")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!ctl_opt_args_2_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "ctl_opt_args_2", pos_)) break;
    }
    return true;
  }

  // COLON ctl_opt_arg
  private static boolean ctl_opt_args_2_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "ctl_opt_args_2_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, COLON);
    result_ = result_ && ctl_opt_arg(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }
